fix : 인기상품 조회, AccessLog 누락 수정